Closed Bug 1756550 Opened 3 years ago Closed 3 years ago

Crash in [@ js::ContextChecks::check]

Categories

(Core :: JavaScript Engine, defect, P2)

defect

Tracking

()

RESOLVED FIXED
99 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox97 --- unaffected
firefox98 --- unaffected
firefox99 + fixed

People

(Reporter: aryx, Assigned: yulia)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

6 crashes from 2 installations (both Windows 10), new in Firefox 99.0a1 20220221213946

Crash report: https://crash-stats.mozilla.org/report/index/601c07d8-8703-45c2-823c-c09050220222

MOZ_CRASH Reason: *** Compartment mismatch 2ccf2ca7d80 vs. 2ccf2ce5b00 at argument 1

Top 10 frames of crashing thread:

0 xul.dll js::ContextChecks::check js/src/vm/JSContext-inl.h:79
1 xul.dll JS::FinishDynamicModuleImport js/src/vm/Modules.cpp:95
2 xul.dll static JS::loader::ModuleLoaderBase::FinishDynamicImport js/loader/ModuleLoaderBase.cpp:601
3 xul.dll JS::loader::ModuleLoaderBase::EvaluateModule js/loader/ModuleLoaderBase.cpp:805
4 xul.dll JS::loader::ModuleLoaderBase::EvaluateModule js/loader/ModuleLoaderBase.cpp:832
5 xul.dll JS::loader::ModuleLoaderBase::ProcessDynamicImport js/loader/ModuleLoaderBase.cpp:721
6 xul.dll mozilla::dom::ScriptRequestProcessor::Run dom/script/ScriptLoader.cpp:462
7 xul.dll static nsContentUtils::AddScriptRunner dom/base/nsContentUtils.cpp:5762
8 xul.dll mozilla::dom::ModuleLoader::ProcessLoadedModuleTree dom/script/ModuleLoader.cpp:425
9 xul.dll JS::loader::ModuleLoadRequest::DependenciesLoaded js/loader/ModuleLoadRequest.cpp:148
Assignee: nobody → ystartsev

So far all crashes from one build, but we should keep an eye on this...

Priority: -- → P3

Changing the priority to p2 as the bug is tracked by a release manager for the current nightly.
See What Do You Triage for more information

Priority: P3 → P2
Blocks: 1756978
Pushed by ystartsev@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d2647082c823 propagate webext global to all dynamically imported modules; r=jonco
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: